@@ -1,5 +1,10 @@
 ﻿$Revision$
 	$Author$ $Date$
+	1. числа заменяем на перечисления и define
+	2. удалён зкоментированный код
+
+#Revision: 1670
+	#Author: ctapmex Date: 2011-03-09 19:51:27 +0500 (Ср, 09 мар 2011)
 	1. убираем старый код, который обеспечивал стабильную работу на длинных строках            
 
 #Revision: 1669
